--- a/模块化/example/scss/app.scss
+++ b/模块化/example/scss/app.scss
@@ -2,7 +2,7 @@
 @import "var";
 @import "reset";
 @import "carousel";
-
+@import "pictureWall";
 
 * {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0)
