要用ul的宽度

--- a/模块化/example/scss/_carousel.scss
+++ b/模块化/example/scss/_carousel.scss
@@ -1,10 +1,9 @@
 .carousel_full {
-  width: 100vw;
-  height: 100vh;
   position: relative;
   overflow: hidden;
   .carousel {
     display: flex;
+    width: $carousel_width;
   }
   .bullet{
     position: absolute;
