--- a/模块化/example/scss/_var.scss
+++ b/模块化/example/scss/_var.scss
@@ -1,5 +1,7 @@
 
-$bullet_bottom: 5vh;
-$bullet_width: 4vw;
-$bullet_height: 2vw;
+$carousel_width: 1920px;
+
+$bullet_bottom: 40px;
+$bullet_width: 40px;
+$bullet_height: 10px;
 $bullet_color: white;
