--- a/模块化/example/scss/app.scss
+++ b/模块化/example/scss/app.scss
@@ -3,6 +3,7 @@
 @import "reset";
 @import "carousel";
 @import "pictureWall";
+@import "goTop";
 
 * {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0)
