--- a/模块化/example/scss/app.scss
+++ b/模块化/example/scss/app.scss
@@ -4,6 +4,7 @@
 @import "carousel";
 @import "pictureWall";
 @import "goTop";
+@import "getMore";
 
 * {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0)
