--- a/模块化/example/scss/_getMore.scss
+++ b/模块化/example/scss/_getMore.scss
@@ -4,8 +4,7 @@
     background: #6cabe5;
     text-align: center;
     padding: 4px;
-    margin: 0 auto;
-    margin-bottom: 20px;
+    margin: 20px auto;
     color: white;
     border-radius: 40px;
     cursor: pointer;
