--- a/HTML5&CSS3/style.css
+++ b/HTML5&CSS3/style.css
@@ -110,3 +110,45 @@
     height: 300px;
     background-image:linear-gradient(135deg, red 141.4213562373095px, yellow 282.842712474619px);
 }
+.trbg {
+    background-color: #eee;
+    padding: 16px;
+    margin: 5px;
+    border-bottom: 1px solid #9E9E9E;
+}
+.initButton {
+    margin: 6px 8px;
+    min-width: 88px;
+    position: relative;
+    font-size: 14px;
+    font-weight: 500;
+    min-height: 36px;
+    line-height: 36px;
+    text-align: center;
+    color: white;
+    border-radius: 2px;
+    cursor: pointer;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+}
+.initButton:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: .12;
+    background-color: currentColor
+}
+.success {
+    background-color: #4caf50 ;
+}
+.error {
+    background-color: #ff5252  ;
+}
+.warning {
+    background-color: #ffc107 ;
+}
+.info {
+    background-color: #2196f3 ;
+}
