--- a/HTML5&CSS3/style.css
+++ b/HTML5&CSS3/style.css
@@ -129,6 +129,7 @@
     border-radius: 2px;
     cursor: pointer;
     box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    transition: all .5s;
 }
 .initButton:after {
     content: '';
@@ -138,10 +139,33 @@
     left: 0;
     top: 0;
     opacity: .12;
-    background-color: currentColor
+}
+.initButton:before {
+    content: '';
+    width: 0;
+    height: 0;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    opacity: .3;
+    background-color: white;
+    border-radius: 4px;
+    transition: .25s all cubic-bezier(0,1.12,1,.7);
 }
 .success {
     background-color: #4caf50 ;
+}
+.initButton:hover:after{
+    background-color: currentColor;
+}
+.initButton:active {
+    box-shadow: 0 5px 5px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
+}
+.initButton:active.initButton:before {
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
 }
 .error {
     background-color: #ff5252  ;
